# mockitup

./: .flake8  .gitignore  .style.yapf  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  setup.py
.github/workflows/: publish-package.yml  pythonpackage.yml  pythonpublish.yml  quality-check.yml
docs/: index.md
examples/: example_1_simplest_mocks.py  example_2_multiple_calls.py  example_3_call_orders.py  example_4_allowance.py  example_5_nested_mocks.py  example_6_multiple_returns.py  example_7_yields.py  example_8_multiple_returns.py  example_8_wildcards.py  example_9_async_mocks.py  pytest.ini
mockitup/: __init__.py  actions.py  arguments_matcher.py  attr_proxy.py  composer.py  mock.py  proxies.py
search/: search_index.json
src/mockitup/: __init__.py  actions.py  arguments_matcher.py  composer.py  proxies.py
tests/: test_async_mocks.py  test_attribute_proxy.py  test_composer.py  test_mock.py
tests/test_proxies/: test_method_proxy.py
