[tool.poetry]
name = "mockitup"
version = "0.0.4"
description = "A `unittest.mock` wrapper for easier mocking"
authors = ["Shacham Ginat <shacham6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.10"
PyHamcrest = "^2.0.2"
typing-extensions = "^3.10.0"


[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest = "^6.2.5"
yapf = "^0.31.0"
anyio = "^3.3.1"
trio = "^0.19.0"
asyncmock = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
